Particles - Emit from Verts emits double on one vert #47983

Closed
opened 2016-03-29 00:07:10 +02:00 by Johannes Kollmer · 12 comments

System Information
Operating system and graphics card
Windows 7
GeForce GT 330 M

Blender Version
Broken:
Tested on 2.77 and 2.72b

Short description of error
Particles of a particle system set to emit from verts (random off) emit two particles on one vertex while not emitting a particle on a different vertex, even though the particle count is set to the same amount as the emitter has vertices.
This only happens if the emitter object has more than a certain amount of vertices. In my tests this was over 450 or so.

Exact steps for others to reproduce the error

  • create torus with 46 major segments and 16 minor segments. This torus has 736 vertices.
  • add particle system to torus
  • set number of particles to 736.
  • set start frame to 1 and end frame to 1
  • set Emit From to Verts
  • turn off Random
  • set all velocity to 0
  • set gravity and all field weights to 0
  • move the timeline
  • set display to cross and draw size to 3px or something like that for better visualisation

You can now see that there is one vertex in the mesh where there is no particle. In my case this was at Vertex 204.

If you set start frame to 1 and end frame to 736 and then move throught the time line frame by frame you can easily see which vertex emits two particles. In my case it was vertex 159.

In the file attached there are two torus objects with one particle system each. You can switch scene cameras to see the relevant position on the objects.
On the one torus the particles are generated over time. When going from frame 159 to 160 it looks as if no particle is generated. But actually there is one generated on the same position where the particle was generated on frame before.
If you switch to the other camera you can see the other torus. All particles are generated at frame one here. You can see the vertex which misses a particle.

ParticlesBug.blend

First fix for this issue (cb19948053) caused (or rather, made worse/more visible) another issue with current distribution code for vertex particles (due to discrete nature of vertices and float imprecisions), as demonstrated by this file:

particles_100.blend

**System Information** Operating system and graphics card Windows 7 GeForce GT 330 M **Blender Version** Broken: Tested on 2.77 and 2.72b **Short description of error** Particles of a particle system set to emit from verts (random off) emit two particles on one vertex while not emitting a particle on a different vertex, even though the particle count is set to the same amount as the emitter has vertices. This only happens if the emitter object has more than a certain amount of vertices. In my tests this was over 450 or so. **Exact steps for others to reproduce the error** - create torus with 46 major segments and 16 minor segments. This torus has 736 vertices. - add particle system to torus - set number of particles to 736. - set start frame to 1 and end frame to 1 - set Emit From to Verts - turn off Random - set all velocity to 0 - set gravity and all field weights to 0 - move the timeline - set display to cross and draw size to 3px or something like that for better visualisation You can now see that there is one vertex in the mesh where there is no particle. In my case this was at Vertex 204. If you set start frame to 1 and end frame to 736 and then move throught the time line frame by frame you can easily see which vertex emits two particles. In my case it was vertex 159. In the file attached there are two torus objects with one particle system each. You can switch scene cameras to see the relevant position on the objects. On the one torus the particles are generated over time. When going from frame 159 to 160 it looks as if no particle is generated. But actually there is one generated on the same position where the particle was generated on frame before. If you switch to the other camera you can see the other torus. All particles are generated at frame one here. You can see the vertex which misses a particle. [ParticlesBug.blend](https://archive.blender.org/developer/F298695/ParticlesBug.blend) First fix for this issue (cb19948053) caused (or rather, made worse/more visible) another issue with current distribution code for vertex particles (due to discrete nature of vertices and float imprecisions), as demonstrated by this file: [particles_100.blend](https://archive.blender.org/developer/F301700/particles_100.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @Lumpengnom-3

Added subscriber: @Lumpengnom-3

Added subscriber: @sindra1961

Added subscriber: @sindra1961

Probably I feel lack one generated emitter.
I think that emitter is drawn on all vertices if you increase the number of emitter by one.

A_ParticlesBug.png
A_ParticlesBug2.png
A_ParticlesBug.blend

Probably I feel lack one generated emitter. I think that emitter is drawn on all vertices if you increase the number of emitter by one. ![A_ParticlesBug.png](https://archive.blender.org/developer/F298716/A_ParticlesBug.png) ![A_ParticlesBug2.png](https://archive.blender.org/developer/F298718/A_ParticlesBug2.png) [A_ParticlesBug.blend](https://archive.blender.org/developer/F298720/A_ParticlesBug.blend)

Or it may not only draw one specific emitter.

Or it may not only draw one specific emitter.

I'm sorry, a location of emitter repeated when I checked it.

import bpy

obj = bpy.data.objects['Torus.001']
pobj = obj.particle_systems
for i, em in enumerate(pobj[0].particles):
    for ci, cem in enumerate(pobj[0].particles):
        if i != ci and em.location == cem.location:
            print(i, ci, ': double')
            break
I'm sorry, a location of emitter repeated when I checked it. ``` import bpy obj = bpy.data.objects['Torus.001'] pobj = obj.particle_systems for i, em in enumerate(pobj[0].particles): for ci, cem in enumerate(pobj[0].particles): if i != ci and em.location == cem.location: print(i, ci, ': double') break ```

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2016-03-30 21:00:49 +02:00

Took me some time to find the cause of this, fix incoming.

Took me some time to find the cause of this, fix incoming.

This issue was referenced by cb19948053

This issue was referenced by cb1994805373c627c4aaf803dc9bffa0a7d24fcb

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Awesome. Thank you! :D

Awesome. Thank you! :D

This issue was referenced by 950acb0ced

This issue was referenced by 950acb0ced2b35a26222778fcac132a8986bb71b
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47983
No description provided.